/tools: Fix grid breakout on small tablet screens

--- a/templates/css/style.scss
+++ b/templates/css/style.scss
@@ -2018,6 +2018,8 @@ input[name="username"], // Honeypot
         }
         p{
             margin:0;
+            word-wrap: break-word; // Fixes breakout with long words
+            word-break: break-word;
         }
 
         + .preview{
